engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__rendering__tests__cached_active_cell_bottom_scroll.snap
---
source: tui/src/chatwidget/rendering_tests.rs
expression: "format!(\"{transcript:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 2 },
    content: [
        "                                                                                ",
        "frame 2 row 2                                                                   ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
