engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__rendering__tests__external_writer_command_center_100.snap
---
source: tui/src/chatwidget/rendering_tests.rs
expression: rendered
---
  🔒   This conversation is open in another app                                          r to retry
      Close it there and press R to continue here.

   r retry   f fork   ←/esc command center   ctrl+c/q exit   ctrl+t transcript
