engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__rendering__tests__fork_pending.snap
---
source: tui/src/chatwidget/rendering_tests.rs
assertion_line: 281
expression: "rows.join(\"\\n\")"
---


  Forking conversation…
